Bug 490408 - "Add Widgets" window randomly not showing
Summary: "Add Widgets" window randomly not showing
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Edit Mode (other bugs)
Version First Reported In: 6.1.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 490403 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-17 14:37 UTC by Henning
Modified: 2024-08-16 19:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henning 2024-07-17 14:37:00 UTC
I have trouble reproducing this. Kinda like the Doppelspalt experiment, whenever I try to record it it works.

When rightclicking on the panel, and clicking "add widgets", often the widget bar did not show, just the normal "zoom out once" happens, not the "zoom to the side"

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.8-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® Xe Graphics
Comment 1 Filip 2024-07-17 16:16:01 UTC
I can confirm this bug. Happens only when panel settings is open.
Comment 2 Marco Martin 2024-07-18 13:23:02 UTC
*** Bug 490403 has been marked as a duplicate of this bug. ***
Comment 3 Akseli Lahtinen 2024-07-18 13:26:03 UTC
How I managed to reproduce this:

1. Right click on a panel
2. Select "Add widgets"
3. Click on panel to open its configuration
4. Right click on panel and select "Add widgets" again
5. The bug may already happen here, but if not, keep clicking on "Add widgets" in the panel right click context menu

It seems to be opening and closing very rapidly
Comment 4 Bug Janitor Service 2024-08-15 10:44:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4610
Comment 5 Nate Graham 2024-08-15 16:52:42 UTC
Git commit 889fd773c65b0a557dcffce4017b4ce1b6d12781 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 15/08/2024 at 16:29.
Pushed by niccolove into branch 'master'.

Only requestActivate the panel config if the focus switches from applet popups to desktop

This is because if some other window (e.g. the widget sidebar) takes focus while a
popup is open, we don't want to ask focus back from that new window.

M  +7    -1    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/889fd773c65b0a557dcffce4017b4ce1b6d12781