Only requestActivate the panel config if the focus switches from applet popups to desktop

This is because if some other window (e.g. the widget sidebar) takes focus while a
popup is open, we don't want to ask focus back from that new window.

BUG:490408